# python-dapr-demo

./: LICENSE  README.md  actors.py  models.py  pyproject.toml  server.py
static/: index.html
